FIXED scrollbar--index.css, modified SearchBar(dismiss)

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -3,12 +3,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; /*estatico*/
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; scroll bar!!!!!!!! */ 
   /* position: absolute; */
-
-
-
 
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
